GNOME Bugzilla – Bug 738858
Main window shouldn't steal New Event popover's focus
Last modified: 2017-04-17 18:20:40 UTC
When I start typing at the New Event popover, GcalWindow steal it's key presses and wrongly thinks it's a search. The searchbar is then displayed. Only with the search bar visible, I'm able to refocus the popover and type the event's name. This is really annoying, and shouldn't happen.
Fixed. Pushed: 374659a444699b72077e2439bc38eccfeb712939